--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="category">Category</string>
-    <string name="history">History</string>
     <string name="favorite">Favorite</string>
+    <string name="history">Hisotry</string>
     <string name="settings">Settings</string>
     <string name="textCategory">Select the drink categories you want to see on the main screen.</string>
     <string name="add_favorite">Add to favorites</string>
